1차 전체 구현 완료
